made it responsive

--- a/index.html
+++ b/index.html
@@ -4,28 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Recipe Book :)</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="article-container">
-        <div class="photo-container"></div>
-        <div class="writings"></div>
+        <div class="photo-container one"></div>
+        <div class="writings">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum totam, magni reprehenderit aliquid est eius a quod dolor. Asperiores qui, delectus sint cupiditate maiores facilis eligendi quia harum doloribus esse!
+        Porro ad sint voluptatum aut voluptate, obcaecati, aspernatur modi atque, nemo maiores itaque natus nisi! Incidunt qui in impedit maiores. Numquam eaque alias molestiae ex tenetur voluptate officiis possimus iste!
+        Doloribus velit nemo consequuntur porro, quibusdam quas quam quisquam fugiat cumque libero ipsa deleniti eveniet minima dicta voluptas excepturi natus fugit corrupti alias qui veniam corporis distinctio. Natus, molestiae distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate corporis vitae unde eius nobis soluta laudantium, accusantium necessitatibus rerum? Facilis ipsam est temporibus eos obcaecati cupiditate soluta pariatur. Illum, alias... <button>read more</button></div>
     </div>
     <div class="article-container">
-        <div class="photo-container"></div>
-        <div class="writings"></div>
+        <div class="photo-container two"></div>
+        <div class="writings">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi accusantium itaque quo distinctio voluptatibus magni expedita quos consequatur. Qui eligendi unde id voluptatem perspiciatis, quas laboriosam fugit voluptatum illo!
+        Veritatis neque fuga quae cupiditate sint laudantium possimus cumque, rem facilis hic tempora vitae. Obcaecati quia a quibusdam harum at! Ullam natus tenetur soluta dignissimos asperiores facere dolorem id ab?
+        Placeat sapiente natus maxime suscipit nihil! Iure rerum saepe quam ipsum commodi. Minima id, accusantium veritatis, ducimus eos possimus, nesciunt voluptate ea repudiandae iste dolor magni? Perferendis delectus beatae dolor?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium dolor iusto nemo reprehenderit tenetur id commodi fugiat placeat saepe nam, nisi doloremque corporis ipsa rem repudiandae architecto! Est, voluptas sunt!... <button>read more</button></div>
     </div>
     <div class="article-container">
-        <div class="photo-container"></div>
-        <div class="writings"></div>
+        <div class="photo-container three"></div>
+        <div class="writings">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolore nostrum illo quisquam! Perspiciatis, nihil? Facere dolor, rem illo laborum eum accusantium consequatur blanditiis eius sint veritatis facilis tempore esse.
+        Eaque magnam quisquam, aut voluptatibus molestias nostrum distinctio, fugit molestiae odit minus eveniet dolorum modi nesciunt perspiciatis commodi quos dolorem? Et sed obcaecati aperiam deserunt laborum hic ducimus rerum natus.
+        Deserunt neque hic expedita ducimus cumque consectetur illo ipsam, adipisci illum, quod accusamus quibusdam? Similique blanditiis soluta vero veniam perferendis voluptatem assumenda ratione, nostrum exercitationem, laboriosam necessitatibus cumque tempore aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam animi nulla laudantium minus error officia eum voluptas corporis, maxime sapiente amet deleniti eveniet eos libero inventore tenetur consequuntur quaerat accusamus...  <button>read more</button></div>
     </div>
     <div class="article-container">
-        <div class="photo-container"></div>
-        <div class="writings"></div>
+        <div class="photo-container four"></div>
+        <div class="writings">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ad unde dolorum ullam asperiores tempore beatae ab. Consectetur veniam aspernatur, nobis laboriosam nulla magnam aliquid recusandae, exercitationem reprehenderit doloremque libero!
+        Veniam molestiae, illo nam distinctio iure inventore aliquid id tempore iusto et sunt eligendi natus, explicabo, quisquam aut! Repellat aliquid in animi praesentium. Dolores aliquam provident repellendus nihil nobis laborum.
+        Et suscipit odit possimus esse illo consequatur error, officia qui, eaque sit voluptatem eveniet dolorum magni. Id veniam ipsam iusto impedit illo mollitia voluptatum nisi accusantium eaque aperiam. Ducimus, velit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, vero repudiandae debitis quo recusandae temporibus officiis a, earum qui sed distinctio minima vitae, facere similique quidem fuga voluptatem aut veniam...  <button>read more</button></div>
     </div>
     <div class="article-container">
-        <div class="photo-container"></div>
-        <div class="writings"></div>
+        <div class="photo-container five"></div>
+        <div class="writings">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, voluptatibus a? Error odio odit rem modi perspiciatis natus minima soluta commodi. Beatae enim impedit ullam deserunt, praesentium quaerat quisquam odio?
+        Asperiores rem saepe architecto earum, ullam nobis illum, exercitationem ipsa laudantium eos obcaecati dolorem sapiente vitae dignissimos nihil amet dolor nulla quidem perferendis. Facilis deserunt consequuntur error esse, laboriosam excepturi.
+        Ab excepturi nobis, esse, provident vel dolorem expedita, voluptatem laudantium quae blanditiis cumque debitis tenetur! Omnis, temporibus, quo amet tenetur vel assumenda veritatis magni soluta, necessitatibus consequuntur eius. Sed, illo. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi cupiditate ipsa temporibus omnis ipsam quibusdam nemo eos numquam, totam nostrum quam! Magni dolorum reiciendis iure architecto cumque dignissimos accusantium omnis...  <button>read more</button></div>
     </div>
 </body>
 </html>
